<resources>

    <!-- KEYS -->
    <string name="facebook_app_id" translatable="false">1614098165472907</string>

    <string name="vk_secure_key" translatable="false">JKFahtP5diq6bj6Jnare</string>
    <string name="vk_app_id" translatable="false">4760918</string>

    <string name="gp_api_key" translatable="false">AIzaSyAOLQ3tzSUQrVcVGfpGRJ6ADQPzeeaM2tU</string>

    <!-- STRINGS -->
    <string name="app_name">Pronounce It!</string>
    <string name="title">Pronounce It!</string>
    <string name="slogan">We make your English better</string>
    <string name="start">training</string>
    <string name="statistic">statistic</string>
    <string name="cards">cards</string>
    <string name="please_say">Please say:</string>
    <string name="gaps_error">We are sorry but you don\'t have installed GApps</string>
    <string name="say_sentence">Say sentence</string>
    <string name="skip_msg">skip</string>
    <string name="listen_msg">listen</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="already_exists">This card already exists</string>
    <string name="cannot_listened">This card cannot be listened</string>
    <string name="incorrectly_words">Incorrectly entered words</string>
    <string name="click_me">Please click me again</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="got_it">Got it!</string>
    <string name="description">In this trainer you have a good opportunity to improve your English.
There is a game mode where user will be offered to repeat word or sentence. You may listen to it so you can memorize these pronunciations and repeat it in future in real life.
Yet another mode is "cards" mode where you can add unknown word and listen to a correct pronunciation. This service uses a special site Forvo.com with all words in the world. It sorts words by rating so you can listen to the best pronunciation of a word.
And there is a statistic where you can see your progress and share it with your friends from social networks.
We make your English better
    </string>
    <string name="error_with_input">Sentence is skipped. Do not cancel input</string>
    <string name="said_msg">You said: </string>
    <string name="interner_error">Please connect to the internet</string>
    <string name="login_vk">Login via VK</string>
    <string name="login_gp">Login via GooglePlus</string>
    <string name="login_fb">Login via Facebook</string>
    <string name="title_activity_login_buttons">LoginButtonsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="wrong_sid">Wrong networkId</string>
    <string name="loading_msg">Loading</string>
    <string name="loading_info">Loading information about user</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="tap_to_add">Tap to add a card</string>
    <string name="long_title">This is a long title to show wrapping of text in the view.</string>
    <string name="press_me">Press me to listen</string>
    <string name="share">Share</string>
    <string name="wrong_msg">Something went wrong</string>
    <string name="username">John Smith</string>
    <string name="download_words">We are trying to download words</string>
    <string name="ext_error">External error</string>
    <string name="already_logged_error">"You've already logged "</string>

    <string name="app">Circular Counter</string>
    <string name="total_tasks">Total tasks:</string>
    <string name="done_tasks">You\'ve pronounced: </string>
    <string name="correct_task">Correct:</string>
    <string name="progress">YOUR PROGRESS</string>
    <string name="firstpart">"I've pronounced more than "</string>
    <string name="secondpart">" percents. Now it's your turn to pronounce!"</string>
    <string name="success_msg">Success</string>
    <string name="addcard_gialog">Add this word to cards?</string>
    <string name="no">NO</string>
    <string name="add">ADD</string>
    <string name="copyright">V. Vysotsky and M. Svidersky, 2015</string>
    <string name="app_created_for">This app was created special for</string>
    <string name="del_cards">Delete all cards</string>
    <string name="really">Really?</string>
    <string name="delete_cards_msg">Do you want to delete all cards?</string>
    <string name="reset_data">Reset user data</string>
    <string name="delinfo_msg">Do you want to clear all your progress?</string>
    <string name="yes">Yes</string>
    <string name="stop_msg">stop</string>

</resources>
