<?xml version="1.0" encoding="utf-8"?>
<com.vsgh.pronounceit.customviews.CustomRippleView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="@dimen/layout_marginleft"
            android:layout_marginRight="@dimen/layout_marginleft"
            android:layout_marginTop="64dp"
            android:background="@color/s_blue"
            android:paddingBottom="2dp">

            <LinearLayout
                android:id="@+id/nameLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:singleLine="false"
                    android:text="@string/username"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/s_white" />
            </LinearLayout>

            <ImageView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/nameLine"
                android:layout_marginBottom="4dp"
                android:background="@color/s_blue" />

            <LinearLayout
                android:id="@+id/minfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/divider"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="@color/s_background"
                android:orientation="vertical"
                android:textSize="12sp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/progress"
                        android:textSize="20sp" />

                    <com.vsgh.pronounceit.customviews.CircularCounter xmlns:meter="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/meter"
                        android:layout_width="220dp"
                        android:layout_height="220dp"
                        android:padding="6dp"
                        meter:metricSize="20sp"
                        meter:metricText="%"
                        meter:range="100"
                        android:layout_margin="5dp"
                        meter:textColor="@color/s_blue"
                        meter:textSize="90sp" />

                    <TableLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_tasks" />

                            <TextView
                                android:id="@+id/tv_all"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/done_tasks"
                                android:layout_marginRight="5dp"/>

                            <TextView
                                android:id="@+id/tv_done"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/correct_task" />

                            <TextView
                                android:id="@+id/tv_correct"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/buttonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:background="@color/s_smoke_white"
                    android:gravity="center">

                    <Button
                        android:id="@+id/connect"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:text="@string/login" />

                    <Button
                        android:id="@+id/share"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:enabled="false"
                        android:text="@string/share" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <com.makeramen.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/userpic"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:background="@color/s_asphalt"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_smith"
            app:riv_border_color="@color/s_asphalt" />
    </RelativeLayout>


</com.vsgh.pronounceit.customviews.CustomRippleView>