<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/s_black_transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgbtn_close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lbtn_d_margintop"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login_facebook"
                android:layout_width="@dimen/lbtn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="#3b5998"
                android:text="@string/login_fb"
                android:textColor="@color/s_white" />

            <Button
                android:id="@+id/btn_login_googleplus"
                android:layout_width="@dimen/lbtn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="#D34836"
                android:text="@string/login_gp"
                android:textColor="@color/s_white" />

            <Button
                android:id="@+id/btn_login_vk"
                android:layout_width="@dimen/lbtn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="#6280a0"
                android:text="@string/login_vk"
                android:textColor="@color/s_white" />
        </LinearLayout>

    </LinearLayout>
    <com.vsgh.pronounceit.customviews.CustomButton
        android:text="SKIP"
        android:textSize="16sp"
        android:height="50dp"
        android:width="60dp"
        android:textColor="@color/s_white"
        custom:cv_background="@drawable/skip_button_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
</LinearLayout>