<?xml version="1.0" encoding="utf-8"?>
<com.vsgh.pronounceit.customviews.CustomRippleView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    ripple:rv_color="@color/s_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <include layout="@layout/header"/>

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="40dp"
                android:text="@string/please_say" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.vsgh.pronounceit.customviews.CustomButton
                android:id="@+id/btn_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                custom:cv_background="@drawable/custom_button_shape"
                android:text="@string/skip_msg"
                android:layout_margin="10dp"/>

            <com.vsgh.pronounceit.customviews.CustomButton
                android:id="@+id/btn_listen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                custom:cv_background="@drawable/custom_button_shape"
                android:text="@string/listen_msg"
                android:layout_margin="10dp"/>
        </LinearLayout>

            <at.markushi.ui.CircleButton
                android:layout_gravity="center"
                android:id="@+id/btn_get_voice"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_mic"
                app:cb_color="@color/s_blue"
                app:cb_pressedRingWidth="10dip"/>

    </LinearLayout>
</com.vsgh.pronounceit.customviews.CustomRippleView>
