<?xml version="1.0" encoding="utf-8"?>
<com.vsgh.pronounceit.customviews.CustomRippleView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    ripple:rv_color="@color/s_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

       <include layout="@layout/header"/>

        <LinearLayout
            android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center|bottom"
            android:orientation="vertical">

            <com.vsgh.pronounceit.customviews.CustomButton
                android:id="@+id/btn_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginTop="@dimen/button_d_margin_top"
                android:paddingBottom="@dimen/button_padding_bottom"
                android:text="@string/start"
                android:textColor="@color/s_blue"
                android:textSize="@dimen/button_text_size"
                custom:cv_background="@drawable/menu_button_shape" />


            <com.vsgh.pronounceit.customviews.CustomButton
                android:id="@+id/btn_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:paddingBottom="@dimen/button_padding_bottom"
                android:text="@string/statistic"
                android:textColor="@color/s_red"
                android:textSize="@dimen/button_text_size"
                custom:cv_background="@drawable/menu_button_shape" />

            <com.vsgh.pronounceit.customviews.CustomButton
                android:id="@+id/btn_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:paddingBottom="@dimen/button_padding_bottom"
                android:text="@string/cards"
                android:textColor="@color/s_yellow"
                android:textSize="@dimen/button_text_size"
                custom:cv_background="@drawable/menu_button_shape" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_help"
                android:layout_width="@dimen/pickbtn_edge"
                android:layout_height="@dimen/pickbtn_edge"
                android:layout_marginRight="@dimen/pickbtn_margin"
                android:src="@drawable/ic_help" />

            <ImageView
                android:layout_width="@dimen/pickbtn_edge"
                android:layout_height="@dimen/pickbtn_edge"
                android:src="@drawable/ic_about"
                android:id="@+id/btn_about" />

            <ImageView
                android:layout_width="@dimen/pickbtn_edge"
                android:layout_height="@dimen/pickbtn_edge"
                android:layout_marginLeft="@dimen/pickbtn_margin"
                android:src="@drawable/ic_settings"
                android:id="@+id/btn_setting" />

        </LinearLayout>
    </LinearLayout>
</com.vsgh.pronounceit.customviews.CustomRippleView>
